# SwiftCast

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  VERSIONING.md  vcpkg.json
.github/workflows/: ci.yml
docs/: BUILDING.md
installer/: build_installer.bat  swiftcast.nsi
resources/: resources.qrc
resources/styles/: dark.qss
resources/windows/: app.rc
src/: main.cpp
src/core/: Application.cpp  Application.h  HotkeyManager.cpp  HotkeyManager.h  Settings.cpp  Settings.h  Updater.cpp  Updater.h
src/extensions/: ExtensionBase.h  ExtensionLoader.cpp  ExtensionLoader.h  ExtensionStore.cpp  ExtensionStore.h
src/ui/: HotkeyEditor.cpp  HotkeyEditor.h  LauncherWindow.cpp  LauncherWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: FileSystem.cpp  FileSystem.h
tests/: Version 0.1.0.bat  test_launch.cpp  test_settings.cpp
